k8s/base/web-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
spec:
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
      - name: web-server
        image: yscraper-web-server:latest # Placeholder image
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        volumeMounts:
        - name: config-volume
          mountPath: /app/config.toml
          subPath: config.toml
      volumes:
      - name: config-volume
        configMap:
          name: web-server-config
